--- a/client/.gitignore
+++ b/client/.gitignore
@@ -4,7 +4,9 @@
 /node_modules
 /.pnp
 .pnp.js
-/client/node_modules
+
+# testing
+/coverage
 
 # production
 /build
@@ -19,4 +21,3 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-webaudit/
