--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "license": "ISC",
     "engines": {
         "node": "18.12.1"
-      }
+      },
+      "proxy" : "http://127.0.0.1:1338/"
   }
   
