--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "date-fns": "^2.29.3",
     "express": "^4.18.2",
     "lighthouse": "^9.6.8",
+    "nodemailer": "^6.8.0",
     "puppeteer": "^19.3.0",
     "request": "^2.88.2"
   },
