--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
   "dependencies": {
     "axios": "^1.2.1",
     "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lighthouse": "^9.6.8",
     "nodemailer": "^6.8.0",
+    "pdfkit": "^0.13.0",
     "puppeteer": "^19.3.0",
     "request": "^2.88.2"
   },
