--- a/package.json
+++ b/package.json
@@ -1,13 +1,16 @@
 {
   "dependencies": {
     "axios": "^1.2.1",
+    "cluster": "^0.7.7",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "lighthouse": "^9.6.8",
+    "ln": "^0.4.3",
     "nodemailer": "^6.8.0",
     "pdfkit": "^0.13.0",
     "puppeteer": "^19.3.0",
+    "puppeteer-cluster": "^0.23.0",
     "request": "^2.88.2"
   },
   "name": "webaudit",
