--- a/package.json
+++ b/package.json
@@ -18,12 +18,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "client": "cd client && npm start",
-    "server": "node server/index.js",
-    "dev": "concurrently --kill-others-on-fail \"npm server\" \"npm client\"",
-    "dev:server": "cd client && npm build && cd ../server && npm start",
     "start": "node server/index.js",
-    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
+    "heroku-postbuild": "cd client && npm install && npm run build"
   },
   "keywords": [],
   "author": "",
